--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "ZF2ModuleLayouts is a simple module to build module specified layouts",
     "type": "library",
     "keywords": [
-        "zf2, module layouts, layouts"
+        "zf2 module layouts"
     ],
     "homepage": "https://github.com/mordilion/ZF2ModuleLayouts",
     "authors": [
